@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T16:21:56Z",
-  "count_outdated" : 347,
-  "uniques_outdated" : 198,
-  "count" : 373,
-  "uniques" : 215,
+  "timestamp" : "2022-06-23T16:22:13Z",
+  "count_outdated" : 348,
+  "uniques_outdated" : 199,
+  "count" : 374,
+  "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 3,
@@ -91,6 +84,13 @@
     },
     {
       "timestamp": "2022-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
